--- a/MAPR1492_notebook_template.ipynb
+++ b/MAPR1492_notebook_template.ipynb
@@ -5,7 +5,7 @@
    "id": "22822788",
    "metadata": {},
    "source": [
-    "# MAPR1492 (Partie Prof. Rignanese) — Notebook de projet\n",
+    "# MAPR1492 (Partie Prof. Rignanese)\n",
     "\n",
     "## Consignes\n",
     "- Télécharger la structure du matériau attribué\n",
