--- a/MAPR1492_notebook_template.ipynb
+++ b/MAPR1492_notebook_template.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "87f1ccbf",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
     "from pathlib import Path\n",
     "\n",
     "# Optionnel (si disponibles):\n",
-    "# from pymatgen.core import Structure\n",
+    "from pymatgen.core import Structure\n",
     "# import spglib\n"
    ]
   },
@@ -65,10 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "fd752747",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CIF: data/MgO.cif\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: indiquez ici où sont vos fichiers (CIF, POSCAR, etc.)\n",
     "DATA_DIR = Path(\"data\")      # mettez vos fichiers ici\n",
@@ -76,7 +84,7 @@
     "OUT_DIR.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "material_name = \"MgO\"\n",
-    "cif_path = DATA_DIR / \"structure.cif\"   # <- renommez selon votre fichier\n",
+    "cif_path = DATA_DIR / f\"{material_name}.cif\"\n",
     "print(\"CIF:\", cif_path)\n"
    ]
   },
@@ -90,10 +98,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "100004d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Full Formula (Mg1 O1)\n",
+      "Reduced Formula: MgO\n",
+      "abc   :   2.938021   2.938021   2.679680\n",
+      "angles:  90.000000  90.000000 120.000020\n",
+      "pbc   :       True       True       True\n",
+      "Sites (2)\n",
+      "  #  SP           a         b    c\n",
+      "---  ----  --------  --------  ---\n",
+      "  0  Mg    0         0         0\n",
+      "  1  O     0.333333  0.666667  0.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thierrydetournay/Desktop/uclouvain/bac 3/Q2/Physique des matériaux/.venv/lib/python3.12/site-packages/pymatgen/core/structure.py:3109: UserWarning: Issues encountered while parsing CIF: 2 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
+      "  struct = parser.parse_structures(primitive=primitive)[0]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Charger la structure (ex: CIF) avec pymatgen ou ASE\n",
     "# Exemple pymatgen:\n",
@@ -103,7 +136,9 @@
     "# Exemple ASE:\n",
     "# from ase.io import read\n",
     "# atoms = read(cif_path)\n",
-    "# atoms\n"
+    "# atoms\n",
+    "structure = Structure.from_file(cif_path)\n",
+    "print(structure)\n"
    ]
   },
   {
@@ -130,7 +165,7 @@
     "# - Avec spglib: identification du groupe d'espace, point group, etc.\n",
     "# - Avec pymatgen: structure.get_space_group_info()\n",
     "#\n",
-    "# À documenter proprement en texte + tableau.\n"
+    "# À documenter proprement en texte + tableau."
    ]
   },
   {
@@ -357,13 +392,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
