--- a/MAPR1492_notebook_template.ipynb
+++ b/MAPR1492_notebook_template.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "87f1ccbf",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "fd752747",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "100004d4",
    "metadata": {},
    "outputs": [
@@ -151,10 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "51341b1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vecteurs du réseau direct : a_1 = [ 1.46901045 -2.54440074  0.        ], a_2 = [1.46901045 2.54440074 0.        ], a_3 = [0.      0.      2.67968]\n",
+      "vecteurs du réseau réciproque : b_1 = [ 2.13857747 -1.23470828  0.        ], b_2 = [2.13857747 1.23470828 0.        ], b_3 = [0.        0.        2.3447521]\n",
+      "type de maille : hexagonal\n",
+      "système cristallin : hexagonal\n",
+      "groupe ponctuel : -6m2\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:\n",
     "# - Extraire les vecteurs de base du réseau direct (a1,a2,a3)\n",
@@ -165,7 +177,21 @@
     "# - Avec spglib: identification du groupe d'espace, point group, etc.\n",
     "# - Avec pymatgen: structure.get_space_group_info()\n",
     "#\n",
-    "# À documenter proprement en texte + tableau."
+    "# À documenter proprement en texte + tableau.\n",
+    "\n",
+    "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
+    "\n",
+    "structure_sga = SpacegroupAnalyzer(structure)\n",
+    "conventional_structure = structure_sga.get_conventional_standard_structure()\n",
+    "\n",
+    "reseau_direct = conventional_structure.lattice.matrix\n",
+    "reseau_reciproque = conventional_structure.lattice.reciprocal_lattice.matrix\n",
+    "\n",
+    "print( \"vecteurs du réseau direct : a_1 = {}, a_2 = {}, a_3 = {}\".format(reseau_direct[0],reseau_direct[1],reseau_direct[2]))\n",
+    "print( \"vecteurs du réseau réciproque : b_1 = {}, b_2 = {}, b_3 = {}\".format(reseau_reciproque[0],reseau_reciproque[1],reseau_reciproque[2]))\n",
+    "print( \"type de maille :\", structure_sga.get_lattice_type())\n",
+    "print( \"système cristallin :\", structure_sga.get_crystal_system())\n",
+    "print( \"groupe ponctuel :\", structure_sga.get_point_group_symbol())"
    ]
   },
   {
