--- a/MAPR1492_notebook_template.ipynb
+++ b/MAPR1492_notebook_template.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "87f1ccbf",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,9 @@
     "\n",
     "# Optionnel (si disponibles):\n",
     "from pymatgen.core import Structure\n",
-    "# import spglib\n"
+    "# import spglib\n",
+    "\n",
+    "from monty.serialization import loadfn\n"
    ]
   },
   {
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "fd752747",
    "metadata": {},
    "outputs": [
@@ -73,7 +75,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CIF: data/MgO.cif\n"
+      "CIF: data/Structure_MgO.cif\n",
+      "h5: data/bandstructure_MgO.h5\n",
+      "h5: data/phonon_MgO.h5\n"
      ]
     }
    ],
@@ -84,8 +88,14 @@
     "OUT_DIR.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "material_name = \"MgO\"\n",
-    "cif_path = DATA_DIR / f\"{material_name}.cif\"\n",
-    "print(\"CIF:\", cif_path)\n"
+    "cif_path = DATA_DIR / f\"Structure_{material_name}.cif\"\n",
+    "bandstructure_path = DATA_DIR / f\"bandstructure_{material_name}.h5\"\n",
+    "phonon_path = DATA_DIR / f\"phonon_{material_name}.h5\"\n",
+    "\n",
+    "print(\"CIF:\", cif_path)\n",
+    "print(\"h5:\", bandstructure_path)\n",
+    "print(\"h5:\", phonon_path)\n",
+    "\n"
    ]
   },
   {
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "100004d4",
    "metadata": {},
    "outputs": [
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "51341b1c",
    "metadata": {},
    "outputs": [
@@ -204,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "47ec273d",
    "metadata": {},
    "outputs": [],
@@ -280,10 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "19db238d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'direct': False, 'transition': 'A-\\\\Gamma', 'energy': 3.0483000000000002}\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO:\n",
     "# - Charger les données de bandes (format dépend de vos sources: .dat, vasprun.xml, etc.)\n",
@@ -293,7 +311,12 @@
     "# - Masse effective au sommet/base en supposant une dispersion parabolique:\n",
     "#   m* = ħ^2 / (d^2E/dk^2)\n",
     "#\n",
-    "# Conseil: commencez par isoler une bande près de l'extremum et faire un fit quadratique E(k).\n"
+    "# Conseil: commencez par isoler une bande près de l'extremum et faire un fit quadratique E(k).\n",
+    "\n",
+    "bs = loadfn(bandstructure_path)\n",
+    "\n",
+    "bande_interdite = bs.get_band_gap()\n",
+    "print(bande_interdite)\n"
    ]
   },
   {
@@ -306,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "1f1cedcf",
    "metadata": {},
    "outputs": [],
@@ -316,7 +339,13 @@
     "# - Pour 3 branches acoustiques et 3 directions, estimer v_s = dω/dq (proche de Γ)\n",
     "#   (attention aux unités!)\n",
     "#\n",
-    "# Conseil: faire un fit linéaire près de Γ sur ω(q) pour chaque direction/branche.\n"
+    "# Conseil: faire un fit linéaire près de Γ sur ω(q) pour chaque direction/branche.\n",
+    "\n",
+    "ph = loadfn(bandstructure_path)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
