enlever le print

--- a/MAPR1492_notebook_template.ipynb
+++ b/MAPR1492_notebook_template.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "100004d4",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
     "# atoms = read(cif_path)\n",
     "# atoms\n",
     "structure = Structure.from_file(cif_path)\n",
-    "print(structure)\n"
+    "#print(structure)\n"
    ]
   },
   {
