--- a/MAPR1492_notebook_template.ipynb
+++ b/MAPR1492_notebook_template.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "87f1ccbf",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "fd752747",
    "metadata": {},
    "outputs": [
@@ -111,32 +111,7 @@
    "execution_count": null,
    "id": "100004d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Full Formula (Mg1 O1)\n",
-      "Reduced Formula: MgO\n",
-      "abc   :   2.938021   2.938021   2.679680\n",
-      "angles:  90.000000  90.000000 120.000020\n",
-      "pbc   :       True       True       True\n",
-      "Sites (2)\n",
-      "  #  SP           a         b    c\n",
-      "---  ----  --------  --------  ---\n",
-      "  0  Mg    0         0         0\n",
-      "  1  O     0.333333  0.666667  0.5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/thierrydetournay/Desktop/uclouvain/bac 3/Q2/Physique des matériaux/.venv/lib/python3.12/site-packages/pymatgen/core/structure.py:3109: UserWarning: Issues encountered while parsing CIF: 2 fractional coordinates rounded to ideal values to avoid issues with finite precision.\n",
-      "  struct = parser.parse_structures(primitive=primitive)[0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: Charger la structure (ex: CIF) avec pymatgen ou ASE\n",
     "# Exemple pymatgen:\n",
@@ -148,7 +123,8 @@
     "# atoms = read(cif_path)\n",
     "# atoms\n",
     "structure = Structure.from_file(cif_path)\n",
-    "#print(structure)\n"
+    "#print(structure)\n",
+    "\n"
    ]
   },
   {
@@ -161,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "51341b1c",
    "metadata": {},
    "outputs": [
@@ -214,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "47ec273d",
    "metadata": {},
    "outputs": [],
@@ -238,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a892d072",
    "metadata": {},
    "outputs": [],
@@ -262,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d64c41c0",
    "metadata": {},
    "outputs": [],
@@ -290,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "19db238d",
    "metadata": {},
    "outputs": [
@@ -329,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "1f1cedcf",
    "metadata": {},
    "outputs": [],
